# td2c

./: README.md  pyproject.toml  requirements.txt
notebooks/: 00_data_generation.ipynb  01_descriptors_computation.ipynb  01_fully_connected.html  02_performances.ipynb  02_run_competitors.ipynb  03_collect_results.ipynb  03_competitors.ipynb  gnn.ipynb  strict_routine.ics  transformers.ipynb
notebooks/assessment/: deltas.ipynb  deltas_simple.ipynb
notebooks/dnn/: 00_feedforward.ipynb
notebooks/example/: 00_data_generation.ipynb  01_descriptors_computation.ipynb  causal_dfs.pkl  descriptors_df_train.pkl  synthetic_data.pkl  synthetic_data_test.pkl  synthetic_data_train.pkl
notebooks/paper_td2c/: 01_descriptors_generation.ipynb  03_run_5_vars.ipynb  03b_adding_new_descriptors.ipynb  06_plot_combined_results.ipynb  07_statistical_tests.ipynb  journal_results_dyno_N10.pkl  journal_results_dyno_N25.pkl  journal_results_dyno_N5.pkl  journal_results_granger_N10.pkl  journal_results_granger_N25.pkl  journal_results_granger_N5.pkl  journal_results_pcmci_N10.pkl  journal_results_pcmci_N25.pkl  journal_results_pcmci_N5.pkl  journal_results_td2c_N10.pkl  journal_results_td2c_N25.pkl  journal_results_td2c_N5.pkl  journal_results_td2c_cmiknn_N10.pkl  journal_results_td2c_cmiknn_N25.pkl  journal_results_td2c_cmiknn_N5.pkl  journal_results_varlingam_N10.pkl  journal_results_varlingam_N5.pkl
notebooks/paper_td2c/descriptors_ts_cmiknn_entropy/: P10_N5_Nj2_n0.01_MB5.pkl  P11_N5_Nj2_n0.01_MB5.pkl  P12_N5_Nj2_n0.01_MB5.pkl  P13_N5_Nj2_n0.01_MB5.pkl  P14_N5_Nj2_n0.01_MB5.pkl  P15_N5_Nj2_n0.01_MB5.pkl  P16_N5_Nj2_n0.01_MB5.pkl  P18_N5_Nj2_n0.01_MB5.pkl  P19_N5_Nj2_n0.01_MB5.pkl  P1_N5_Nj2_n0.01_MB5.pkl  P20_N5_Nj2_n0.01_MB5.pkl  P2_N5_Nj2_n0.01_MB5.pkl  P3_N5_Nj2_n0.01_MB5.pkl  P4_N5_Nj2_n0.01_MB5.pkl  P6_N5_Nj2_n0.01_MB5.pkl  P7_N5_Nj2_n0.01_MB5.pkl  (+2 more)
tests/data_generation/: test_actual_values.py  test_dags.ipynb  test_dags.py  test_functions.py
tests/descriptors/: test_d2c.py  test_data.pkl  test_true_causal_dfs.ipynb
(+46 files in other folders)
